--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
 
   <link rel="shortcut icon" href="public/favicon/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="public/favicon/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="public/favicon/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="public/favicon/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="public/favicon/favicon.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="public/favicon/favicon.png" />
   <link rel="mask-icon" href="public/favicon/safari-pinned-tab.svg" color="#021c69" />
 
   <link rel="manifest" href="/manifest.webmanifest" />
